style(mds-entity): fix text vertical align

--- a/projects/stencil/src/components/mds-entity/mds-entity.css
+++ b/projects/stencil/src/components/mds-entity/mds-entity.css
@@ -82,6 +82,7 @@ mds-spinner {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  justify-content: center;
   white-space: nowrap;
 }
 
